samples/_failures_safe/1761623150_884011_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2fed9c5.c: In function ‘main’:
./samples/SAFE/__tmp_b2fed9c5.c:150:32: error: missing terminating ' character
  150 |         input[input_len - 1] = '\
      |                                ^~
./samples/SAFE/__tmp_b2fed9c5.c:150:9: error: expected expression at end of input
  150 |         input[input_len - 1] = '\
      |         ^~~~~
./samples/SAFE/__tmp_b2fed9c5.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2fed9c5.c:150:9: error: expected declaration or statement at end of input
